--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,14 @@ dependencies:
   flutter_screenshot_callback: ^0.0.9
   #loading动画库 https://pub.dev/packages/flutter_spinkit/install
   flutter_spinkit: ^5.2.0
+  #Bruno 企业级移动端 Flutter 组件库 https://pub.dev/packages/bruno/install
+  #官网在线演示地址 https://bruno.ke.com/page/widgets/brn-toast
+  bruno: ^3.4.3
+  #提示框组件 https://pub.dev/packages/fluttertoast/install
+  fluttertoast: ^8.0.8
+  #提供了图像加载、保存和操作各种图像文件格式的能力  https://pub.dev/packages/image/install
+  image: ^4.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
