--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   image: ^4.1.3
   #加载组件 https://pub.flutter-io.cn/packages/flutter_easyloading/install
   flutter_easyloading: ^3.0.5
+  #蓝牙组件 https://pub.dev/packages/flutter_blue_plus/install
+  flutter_blue_plus: ^1.32.5
 
 dev_dependencies:
   flutter_test:
